# shawl

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  HISTORY.md  README.md  setup.cfg  setup.py  tox.ini
resources/dicts/pages/: CustomPage.yaml
shawl/: __init__.py  __main__.py
shawl/config/: __init__.py  _localization.py
shawl/core/: _base_collection.py  _base_element.py  _base_page.py
shawl/decorators/: __init__.py
shawl/exceptions/: __init__.py
shawl/utils/: __init__.py  _allure_utils.py  _stubber.py  _waits.py
tests/: test_base_collection.py  test_base_element.py  test_base_page.py  test_configuration.py
tests/elements/: __init__.py  elements.py  pages.py
