[metadata]
name = shawl
version = attr: shawl.__version__
description = shawl: Wrapper over Selenuim, implements patterns PageObject and a little bit PageElement.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oiakinat/shawl
author = Nekrasov Nikolai, Aigul Valieva, Vladislav Olshanskiy
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = selenum, yaml
project_urls =
    Source=https://github.com/oiakinat/shawl
    Tracker=https://github.com/oiakinat/shawl/issues

[options]
packages =
    shawl
    shawl.config
    shawl.core
    shawl.decorators
    shawl.exceptions
    shawl.utils
install_requires =
    selenium==3.141.0
    PyYAML>=5.2
    wrapt
    python-dotenv
    allure-python-commons
python_requires = >=3.5
setup_requires =
    setuptools>=40.0
    setuptools-scm
zip_safe = no


[options.extras_require]
testing =
    pytest

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = shawl
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
no_implicit_reexport = True
